Update entity QRCODE 1/2

--- a/generators/entity-client/templates/angular/src/main/webapp/app/entities/detail/entity-management-detail.component.html.ejs
+++ b/generators/entity-client/templates/angular/src/main/webapp/app/entities/detail/entity-management-detail.component.html.ejs
@@ -98,6 +98,12 @@ _%>
     }
 }
 _%>
+<dt>QrCode</dt>
+<dd>
+  <div>
+    <qrcode [value]="Test QR Code Entity" [size]="150"></qrcode>
+  </div>
+</dd>
             </dl>
 
             <button type="submit"
