Update bug fix "qr-code" note "qrcode" and changing what we take

--- a/generators/entity-client/templates/angular/src/main/webapp/app/entities/detail/entity-management-detail.component.html.ejs
+++ b/generators/entity-client/templates/angular/src/main/webapp/app/entities/detail/entity-management-detail.component.html.ejs
@@ -101,7 +101,7 @@ _%>
 <dt>QrCode</dt>
 <dd>
   <div>
-    <qrcode [value]="Test QR Code Entity" [size]="150"></qrcode>
+    <qr-code [value]="'/<%= entityUrl %>/<%= entityInstance %>.id/view'" [size]="150"></qr-code>
   </div>
 </dd>
             </dl>
